UI Alignment Fix

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -688,3 +688,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding-bottom: 2.5rem;    /* Footer height */
 
 }
+
+.font-size-large{
+  font-size: large !important;
+}
